SNAP-557: fix lib styles

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="web">
     <head>
         <meta charset="UTF-8">
+        <!--<link rel="stylesheet" href="/assets/styles/style.css">-->
     </head>
     <body class="snap" ui-view></body>
 </html>
